--- a/package.json
+++ b/package.json
@@ -9,16 +9,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "pinia": "^2.3.0",
+    "@mdi/font": "^7.4.47",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "pinia": "^2.3.1",
+    "sass": "^1.83.4",
     "vue": "^3.5.13",
-    "vue-router": "4"
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.7.7",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@types/node": "^22.10.6",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^18.19.71",
+    "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.5",
-    "vue-tsc": "^2.2.0"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11",
+    "vue-tsc": "^1.8.27"
   }
 }
