--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass": "^1.83.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue3-recaptcha2": "^1.8.0",
     "vuetify": "^3.7.7",
     "webfontloader": "^1.6.28"
   },
