--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.3.1",
     "sass": "^1.83.4",
     "vue": "^3.5.13",
@@ -26,6 +27,7 @@
     "@types/node": "^18.19.71",
     "@types/vue": "^2.0.0",
     "@types/vue-router": "^2.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "identity-obj-proxy": "^3.0.0",
